Fix de comentarios

--- a/Inicio/form.html
+++ b/Inicio/form.html
@@ -172,6 +172,7 @@
                         <label>Propósito:<textarea></textarea></label>
                         <label>Contenido:<textarea></textarea></label>
                         <label>Actividad:<textarea></textarea></label>
+                        <label>Criterios de evaluacion:<textarea></textarea></label>
                     </fieldset>
                     <button type="button" class="add-tp-btn add-btn">+ Agregar TP Regular</button>
                 </fieldset>
@@ -296,6 +297,9 @@
                 <label>Contenido:<textarea></textarea></label>
                 <label>Actividad:<textarea></textarea></label>
                 <label>Ubicación:<textarea></textarea></label>
+                <label>Epoca:<textarea></textarea></label>
+
+                <label>Criterio de evaluacion:<textarea></textarea></label>
                 <button type="button" class="remove-btn">×</button>
             `;
             container.insertBefore(newItem, this);
@@ -313,6 +317,8 @@
                 <label>Contenido:<textarea></textarea></label>
                 <label>Actividad:<textarea></textarea></label>
                 <label>Ubicación:<textarea></textarea></label>
+                <label>Epoca:<textarea></textarea></label>
+                <label>Criterio de evaluacion:<textarea></textarea></label>
                 <button type="button" class="remove-btn">×</button>
             `;
             container.insertBefore(newItem, this);
@@ -344,6 +350,7 @@
                     <label>Propósito:<textarea></textarea></label>
                     <label>Contenido:<textarea></textarea></label>
                     <label>Actividad:<textarea></textarea></label>
+                    <label>Criterio de evaluacion:<textarea></textarea></label>
                     <button type="button" class="remove-btn">×</button>
                 `;
                 container.insertBefore(newItem, this);
